add bongo cat widget by dsifry

--- a/config/west.yml
+++ b/config/west.yml
@@ -8,10 +8,21 @@ manifest:
       # - https://docs.zephyrproject.org/3.5.0/develop/west/manifest.html#projects
   #  - name: gpeye
   #    url-base: https://github.com/GPeye
+    - name: rui
+      url-base: https://github.com/RayZhang001/
+    - name: dsifry
+      url-base: https://github.com/dsifry/
+
   projects:
    # - name: mario-peripheral-animation
    #   remote: gpeye
    #    revision: main 
+    # - name: nice-view-mod
+    #   remote: rui
+    #   revision: main
+    - name: nice-view-mod #bongo cat widget
+      remote: dsifry
+      revision: main
     - name: eyelash_sofle
       url: https://github.com/a741725193/zmk-sofle
       revision: main
